--- a/assignment3-starter-code/styles/styles.css
+++ b/assignment3-starter-code/styles/styles.css
@@ -50,3 +50,12 @@ input[type="text"] {
     transform: rotate(360deg);
   }
 }
+
+td {
+    width: 15%;
+}
+
+.error {
+  color: #F00;
+  font-weight: bold;
+}
