Showing categories done

--- a/assignment4-starter-code/src/templates/category-item.templates.html
+++ b/assignment4-starter-code/src/templates/category-item.templates.html
@@ -1,7 +1,7 @@
 <ul>
   <li ng-repeat="item in $ctrl.items">
-		<a href="" ui-sref="">  
-			{{ item.name }} of {{ item.special_instructions }} 
+		<a href="">  
+			{{ item.name }}
 		</a>
   </li>
 </ul>
