--- a/assignment4-starter-code/src/templates/category-item.templates.html
+++ b/assignment4-starter-code/src/templates/category-item.templates.html
@@ -1,6 +1,6 @@
 <ul>
   <li ng-repeat="item in $ctrl.items">
-		<a href="">  
+		<a href="" ui-sref="items({shortName: item.short_name})">  
 			{{ item.name }}
 		</a>
   </li>
