--- a/assignment4-starter-code/src/templates/items-description.template.html
+++ b/assignment4-starter-code/src/templates/items-description.template.html
@@ -1,6 +1,6 @@
 <ul>
-  <li ng-repeat="item in $ctrl.items">
-		{{ item.name }}<br/>		
+  <li ng-repeat="item in $ctrl.items" class="nav-pills nav-stacked item-details">
+		<span class="dish-name">{{ item.name }}</span><br/>		
 		{{ item.description }}<br/>	
   </li>
 </ul>
